fix advanced effect config not showing zone data

--- a/styles/sheets/_list.scss
+++ b/styles/sheets/_list.scss
@@ -226,7 +226,7 @@
                 &:not(.input)
                 {
 
-                    border: 1px solid var(--name-bg);
+                    border: 1px solid var(--name-border);
                     border-radius: 10px;
                     padding: 0.5rem;
                     background:  var(--name-bg);
